# pen-plotter-studio

./: .gitignore  BUILD-WINDOWS.md  PLOT-OPTIONS-CHANGES.md  PLOTTER_STYLE_SPECS.md  PPSTUDIO_FORMAT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mockups/: ui-refresh.html
scripts/: build-windows-all.cmd  build-windows-arm64.cmd  build-windows-x64.cmd  build-windows.ps1  gen-icon.mjs
src/: generationWorker.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: contours.ts  field.ts  gcode.ts  geometry.ts  imageField.ts  noise.ts  optimize.ts  rng.ts  svg.ts
src/core/generators/: differentialGrowth.ts  flowField.ts  harmonicRibbon.ts  hatching.ts  metaballs.ts  phyllotaxis.ts  reactionDiffusion.ts  ribbonWeave.ts  ridgeline.ts  spaceColonization.ts  spaceFilling.ts  streamlines.ts  topographic.ts  tsp.ts  voronoiCells.ts  waveInterference.ts
src/ui/: controls.ts  preview.ts
