[package]
name = "pen-plotter-app"
version = "0.1.0"
description = "Design pen-plotter art and export it to GCode"
authors = ["Rob Righter"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"

[features]
# Default to a smaller build; enable on CI when packaging.
custom-protocol = ["tauri/custom-protocol"]
